--- a/searx/templates/__common__/about.html
+++ b/searx/templates/__common__/about.html
@@ -1,6 +1,7 @@
 <div{% if rtl %} dir="ltr"{% endif %}>
-  <h1>About <a href="{{ url_for('index') }}">searx</a></h1>
+  {% include "__common__/instance_info.html" %}
 
+  <h2>About searx</h2>
   <p>
     Searx is a <a href="https://en.wikipedia.org/wiki/Metasearch_engine">metasearch engine</a>,
     aggregating the results of other <a href="{{ url_for('preferences') }}">search engines</a>
@@ -17,6 +18,7 @@
   </ul>
 
   <hr />
+
 
   <h2>Why use searx?</h2>
 
